--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "Operador_Log(II)02.C": "cpp"
+        "Operador_Log(II)02.C": "cpp",
+        "Operador_Log_(II)02.C": "cpp"
     }
 }
